tests/invalid/dict_magic_contains_wrong_key_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    d.__contains__("x")


if __name__ == "__main__":
    run_case()
